--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,10 +41,8 @@
           <td>{{student.name}}</td>
           <td>{{student.address}}</td>
           <td>{{student.percentage}}</td>
-          <td><button type="button" class="btn btn-primary"  data-bs-toggle="modal" data-bs-target="#exampleModal"
-            (click)="edit(student)">Edit</button></td>
-        <td><button type="button" class="btn btn-danger" (click)="deleteStudent(student)">Delete</button></td>
-          
+          <td><button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)= edit(student)>Edit</button></td>
+          <td><button type="button" class="btn btn-danger" (click)="deleteStudent(student)" >Delete</button></td>
         </tr>
       </tbody>
     </table>
@@ -55,39 +53,35 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Update Student</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form #updateForm="ngForm" (ngSubmit)="updateStudent()">
+        <form #updateForm="ngForm"  (ngSubmit)="updateStudent()">
           <div class="form-group">
-            <label for="rollNumber">Student Rollnumber :</label>
-            <input type="text" disabled #rollNumber [(ngModel)]="studentToUpdate.rollNumber" name="rollNumber" id="rollNumber"
-              class="form-control" placeholder="Student Roll number">
+            <label for="rollNumber">Student RollNumber :</label>
+            <input type="text" #rollNumber [(ngModel)]="studentToUpdate.rollNumber" name="rollNumber" id="rollNumber" class="form-control" placeholder="Student rollNumber">
           </div>
           <div class="form-group">
             <label for="name">Student Name :</label>
-            <input type="text" #name [(ngModel)]="studentToUpdate.name" name="name" id="name" class="form-control"
-              placeholder="Student Name">
+            <input type="text" #name [(ngModel)]="studentToUpdate.name" name="name" id="name" class="form-control" placeholder="Student Name">
           </div>
           <div class="form-group">
             <label for="address">Student Address :</label>
-            <input type="text" #address [(ngModel)]="studentToUpdate.address" name="address" id="address"
-              class="form-control" placeholder="Student Address">
+            <input type="text" #address [(ngModel)]="studentToUpdate.address" name="address" id="address" class="form-control"
+              placeholder="Student Address">
           </div>
           <div class="form-group">
             <label for="percentage">Student Percentage :</label>
-            <input type="number" #percentage [(ngModel)]="studentToUpdate.percentage" name="percentage" id="percentage"
-              class="form-control" placeholder="Student Percentage">
+            <input type="number" #percentage [(ngModel)]="studentToUpdate.percentage" name="percentage" id="percentage" class="form-control"
+              placeholder="Student Percentage">
           </div>
           <div class="form-group">
             <input type="submit" value="Update" class="btn btn-primary w-100">
           </div>
         </form>
       </div>
+
     </div>
   </div>
 </div>
-
